--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,27 @@ body {
     justify-content: center;
     align-items: center;
     height: 90vh;
+    background-color: rgb(48, 47, 47);
+    color: white;
+}
+
+#display {
+    width: 23rem;
+    height: 7rem;
+    border: 5px solid green;
+    margin-top: 1rem;
+    position: relative;
+    left: 0.4rem;
 }
 
 #container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    border: 5px solid red;
-    width: 30rem;
-    height: 30rem;
-    font-size: 5rem;
+    justify-content: space-between;
+    border: 3px solid yellow;
+    width: 7em;
+    height: 35rem;
+    font-size: 3.5rem;
     font-family: Arial;
 }
 
@@ -23,8 +34,32 @@ body {
 }
 
 .individual {
-    border: 3px solid blue;
-    width: 8rem;
-    height: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 3px solid rgb(65, 65, 255);
+    border-radius: 10%;
+    width: 4.8rem;
+    height: 4.8rem;
     text-align: center;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.individual:hover {
+    width: 6rem;
+    height: 6rem;
+}
+
+#zero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 3px solid rgb(65, 65, 255);
+    border-radius: 10%;
+    width: 11rem;
+    height: 4.8rem;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 0.5rem;
 }
