--- a/styles.css
+++ b/styles.css
@@ -39,16 +39,15 @@ body {
     justify-content: center;
     border: 3px solid rgb(65, 65, 255);
     border-radius: 10%;
-    width: 4.8rem;
-    height: 4.8rem;
+    width: 4.5rem;
+    height: 4.5rem;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
 }
 
 .individual:hover {
-    width: 6rem;
-    height: 6rem;
+    border: 3px solid yellow;
 }
 
 #zero {
@@ -58,8 +57,12 @@ body {
     border: 3px solid rgb(65, 65, 255);
     border-radius: 10%;
     width: 11rem;
-    height: 4.8rem;
+    height: 4.5rem;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
+}
+
+#zero:hover {
+    border: 3px solid yellow;
 }
