--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 90vh;
-    /*background-color: rgb(48, 47, 47);*/
+    background-color: rgb(48, 47, 47);
     color: white;
 }
 
@@ -50,7 +50,7 @@ body {
     border: 3px solid yellow;
 }
 
-#digit-0 {
+#digit_0 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,6 +63,6 @@ body {
     margin-bottom: 0.5rem;
 }
 
-#digit-0:hover {
+#digit_0:hover {
     border: 3px solid yellow;
 }
