--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@ body {
 }
 
 #display {
-    width: 23rem;
-    height: 7rem;
-    border: 5px solid green;
+    width: 14.5rem;
+    height: 5rem;
+    border: 5px solid black;
+    background-color: rgb(100,100,100);
     margin-top: 1rem;
     position: relative;
     left: 0.4rem;
@@ -21,12 +22,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 3px solid yellow;
+    border: 3px solid black;
     background-color: rgb(40, 40, 40);
-    width: 7em;
-    height: 35rem;
-    font-size: 3.5rem;
+    width: 80vw;
+    height: 70vh;
+    font-size: 2rem;
     font-family: Arial;
+    margin-top: 10vh;
 }
 
 .column {
@@ -39,10 +41,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 3px solid rgb(65, 65, 255);
+    border: 3px solid rgb(120, 120, 120);
     border-radius: 10%;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 3rem;
+    height: 3rem;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
@@ -56,10 +58,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 3px solid rgb(65, 65, 255);
+    border: 3px solid rgb(120, 120, 120);
     border-radius: 10%;
-    width: 11rem;
-    height: 4.5rem;
+    width: 7rem;
+    height: 3rem;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
