--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ body {
 }
 
 #display {
-    width: 14.5rem;
+    width: 70vw;
     height: 5rem;
     border: 5px solid black;
     background-color: rgb(100,100,100);
     margin-top: 1rem;
     position: relative;
-    left: 0.4rem;
+    left: 3.5vw;
 }
 
 #container {
@@ -43,8 +43,8 @@ body {
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
     border-radius: 10%;
-    width: 3rem;
-    height: 3rem;
+    width: 15vw;
+    height: 15vw;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
@@ -60,8 +60,8 @@ body {
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
     border-radius: 10%;
-    width: 7rem;
-    height: 3rem;
+    width: 35vw;
+    height: 16vw;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
