--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap');
 
 body {
     display: flex;
@@ -59,6 +60,8 @@ body {
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
+    font-family: 'M PLUS 1p', sans-serif;
+    color: orange;
 }
 
 .individual:hover {
@@ -76,8 +79,16 @@ body {
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
+    color: orange;
 }
 
 #digit_0:hover {
     border: 3px solid yellow;
+}
+
+#clear {
+    width: 73vw;
+    height: 4vh;
+    border-radius: 2%;
+    font-size: 1.5rem;
 }
