--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,19 @@ body {
     color: white;
 }
 
-#display {
-    font-family: 'VT323', monospace;
-}
-
 #display_container {
     display: flex;
+    font-family: 'VT323', monospace;
     justify-content: flex-end;
     align-items: center;
     color: black;
     font-size: 5rem;
-    width: 70vw;
+    width: 24vw;
     height: 5rem;
     border: 5px solid black;
     background-color: rgb(100,100,100);
     margin-top: 1rem;
     position: relative;
-    left: 3.5vw;
 }
 
 #container {
@@ -36,11 +32,12 @@ body {
     justify-content: space-between;
     border: 3px solid black;
     background-color: rgb(40, 40, 40);
-    width: 80vw;
+    width: 25vw;
     height: 70vh;
     font-size: 2rem;
     font-family: Arial;
     margin-top: 10vh;
+    padding: 2rem;
 }
 
 .column {
@@ -55,8 +52,8 @@ body {
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
     border-radius: 10%;
-    width: 15vw;
-    height: 15vw;
+    width: 5vw;
+    height: 5vw;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
@@ -73,9 +70,9 @@ body {
     flex-direction: column;
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
-    border-radius: 10%;
-    width: 35vw;
-    height: 16vw;
+    border-radius: 5%;
+    width: 12vw;
+    height: 5vw;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
