--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,24 @@ body {
     color: white;
 }
 
+.fab {
+    position: fixed;
+    font-size: 4.5rem;
+    top: 1rem;
+    left: 1rem;
+    color: white;
+    transition: 0.3s;
+}
+
+.fab:hover {
+    font-size: 5rem;
+    color: yellow;
+}
+
+#github {
+    color: red !important;
+}
+
 #display_container {
     display: flex;
     font-family: 'VT323', monospace;
@@ -18,12 +36,12 @@ body {
     align-items: center;
     color: black;
     font-size: 5rem;
-    width: 24vw;
+    width: 25vw;
     height: 5rem;
     border: 5px solid black;
     background-color: rgb(100,100,100);
     margin-top: 1rem;
-    position: relative;
+    margin-bottom: 1.5rem;
 }
 
 #container {
@@ -38,6 +56,7 @@ body {
     font-family: Arial;
     margin-top: 10vh;
     padding: 2rem;
+    box-shadow: 10px 10px 25px black;
 }
 
 .column {
@@ -51,14 +70,19 @@ body {
     flex-direction: column;
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
+    background-color: rgb(60, 60, 60);
     border-radius: 10%;
-    width: 5vw;
-    height: 5vw;
+    width: 4.5vw;
+    height: 4.5vw;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
     font-family: 'M PLUS 1p', sans-serif;
     color: orange;
+}
+
+.operator {
+    background-color: rgb(36, 87, 101) !important;
 }
 
 .individual:hover {
@@ -71,12 +95,13 @@ body {
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
     border-radius: 5%;
-    width: 12vw;
-    height: 5vw;
+    width: 10.7vw;
+    height: 4.5vw;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
     color: orange;
+    background-color: rgb(60, 60, 60);
 }
 
 #digit_0:hover {
@@ -88,4 +113,17 @@ body {
     height: 4vh;
     border-radius: 2%;
     font-size: 1.5rem;
+    background-color: rgb(100, 20, 20);
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    background-color: black;
+    font-size: 0.9rem;
+    width: 100vw;
+    text-align: center;
+    padding-top: 0.5rem;
+    height: 3vh;
+    font-family: Arial;
 }
