--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
     align-items: center;
     color: black;
     font-size: 5rem;
-    width: 25vw;
+    width: 23vw;
     height: 5rem;
     border: 5px solid black;
     background-color: rgb(100,100,100);
@@ -50,7 +50,7 @@ body {
     justify-content: space-between;
     border: 3px solid black;
     background-color: rgb(40, 40, 40);
-    width: 25vw;
+    width: 20vw;
     height: 70vh;
     font-size: 2rem;
     font-family: Arial;
@@ -72,8 +72,8 @@ body {
     border: 3px solid rgb(120, 120, 120);
     background-color: rgb(60, 60, 60);
     border-radius: 10%;
-    width: 4.5vw;
-    height: 4.5vw;
+    width: 4vw;
+    height: 4vw;
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
@@ -95,8 +95,8 @@ body {
     justify-content: center;
     border: 3px solid rgb(120, 120, 120);
     border-radius: 5%;
-    width: 10.7vw;
-    height: 4.5vw;
+    width: 9vw;
+    height: 4vw;
     text-align: center;
     cursor: pointer;
     margin-bottom: 0.5rem;
@@ -109,11 +109,12 @@ body {
 }
 
 #clear {
-    width: 73vw;
+    width: 19vw;
     height: 4vh;
     border-radius: 2%;
     font-size: 1.5rem;
     background-color: rgb(100, 20, 20);
+    margin-bottom: 1rem;
 }
 
 #footer {
