--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
     justify-content: space-between;
     border: 3px solid black;
     background-color: rgb(40, 40, 40);
+    border-radius: 5%;
     width: 20vw;
     height: 70vh;
     font-size: 2rem;
