--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     color: black;
-    font-size: 5rem;
+    font-size: 4rem;
     width: 23vw;
     height: 5rem;
     border: 5px solid black;
@@ -109,4 +109,9 @@ body {
     padding-top: 0.5rem;
     height: 3vh;
     font-family: Arial;
+}
+
+#evaluate {
+    background-color: orange !important;
+    color: black;   
 }
