--- a/styles.css
+++ b/styles.css
@@ -91,12 +91,38 @@ body {
 }
 
 #clear {
-    width: 19vw;
+    width: 14vw;
     height: 4vh;
     border-radius: 2%;
     font-size: 1.5rem;
     background-color: rgb(100, 20, 20);
     margin-bottom: 1rem;
+}
+
+#backspace {
+    width: 4vw;
+    margin-left: 0.1rem;
+    height: 4vh;
+    border-radius: 2%;
+    font-size: 1.5rem;
+    background-color: rgb(100, 20, 20);
+    margin-bottom: 1rem;
+}
+
+#backspace_image {
+    height: 2rem;
+}
+
+#addition {
+    font-size: 2.2rem;
+}
+
+#subtract {
+    font-size: 3.5rem;
+}
+
+#multiply {
+    font-size: 1.75rem;
 }
 
 #footer {
